Geo-Wall-E/Samples/Errors/MissingQuotes.gs
//This is a G# program with errors. A quote is missing.

point a "Iam ok";

point b ;

point c "Iam buggy ;

point d;

//End of program